--- a/src/index.css
+++ b/src/index.css
@@ -102,6 +102,13 @@ html {
 }
 
 @media print {
+  html, body {
+    height: auto !important;
+    overflow: visible !important;
+    margin: 0 !important;
+    padding: 0 !important;
+  }
+
   body * {
     visibility: hidden;
   }
@@ -116,5 +123,10 @@ html {
     left: 0;
     top: 0;
     width: 100%;
+    page-break-after: avoid !important;
+  }
+
+  body > #root {
+    height: auto !important;
   }
 }
